fixed overflowing issue

--- a/index.css
+++ b/index.css
@@ -9,6 +9,11 @@ body {
     sans-serif;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 .header {
   text-align: center;
 }
@@ -63,12 +68,13 @@ input[type="number"] {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 .app {
   background-color: #3d434b;
   padding: 2em;
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
 }
 
